# OpenBacktest

./: README-FRA.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml
OpenBacktest/: ObtBacktestDeck.py  ObtEngine.py  ObtGraph.py  ObtPositions.py  ObtUtility.py  ObtWallet.py  example_script.py
src/OpenBacktest/: ObtEngine.py  ObtWallet.py
test/: Asymmetric_Engine_Sample_EN.py  Asymmetric_Engine_Sample_FRA.py  Simple_strategy-FRA.py  Simple_strategy.py  Symmetric_Engine_Sample_EN.py  Symmetric_Engine_Sample_FRA.py  example_script.py  first_engine_sample.py
test/data/: ETHUSDT-01#january#2021-1d-.csv  ETHUSDT-01#january#2021-1h-.csv
