[metadata]
name= open-backtest
version= 0.0.1
author= Shaft3796
author_email= sh4ft.me@gmail.com
description= Open Backtest is a beginner friendly & powerful backtesting engine for crypto trading
url = https://github.com/pypa/sampleproject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = OpenBacktest
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src